fix swagger and jwt
